Freestyle lines in Cycles are in an unexpected color space #44048

Closed
opened 2015-03-19 19:40:29 +01:00 by Sam Brubaker · 11 comments

Version: 2.73 (but also 2.74 rc2) linux 64

How to reproduce:

  • Open the attached file and inspect the simple blue cube material and freestyle settings.
  • Notice that the line color and emission color values are identical.
  • Render the scene and notice that the emission shader emits exactly the same color as set in the properties, but the freestyle line is much darker than expected.
  • Try the same thing in BI and notice that the freestyle color space is not affected in this way when rendered with BI.

If this is an intentional aspect of Freestyle in Cycles, I cannot figure out why.

Cycles_Freestyle_Color_space.blend

Version: 2.73 (but also 2.74 rc2) linux 64 How to reproduce: - Open the attached file and inspect the simple blue cube material and freestyle settings. - Notice that the line color and emission color values are identical. - Render the scene and notice that the emission shader emits exactly the same color as set in the properties, but the freestyle line is much darker than expected. - Try the same thing in BI and notice that the freestyle color space is not affected in this way when rendered with BI. If this is an intentional aspect of Freestyle in Cycles, I cannot figure out why. [Cycles_Freestyle_Color_space.blend](https://archive.blender.org/developer/F153248/Cycles_Freestyle_Color_space.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Tamito Kajiyama was assigned by Julian Eisel 2015-03-19 20:54:56 +01:00
Member

Added subscribers: @kjym3, @JulianEisel

Added subscribers: @kjym3, @JulianEisel
Member

@kjym3, Sounds similar to #43624, maybe same fix is needed again?

@kjym3, Sounds similar to #43624, maybe same fix is needed again?

Thanks for the problem report. The issue looks like related to color management. I will look into it and come back to you with updates.

Thanks for the problem report. The issue looks like related to color management. I will look into it and come back to you with updates.

Added subscribers: @Sergey, @ThomasDinges

Added subscribers: @Sergey, @ThomasDinges

Freestyle generates a temporary scene to render strokes using Cycles. The temporary scene is populated by mesh objects representing the strokes. The upper half of the screen capture below shows the (slightly simplified) shader setttings used for the stroke meshes. Stroke colors are taken from a vertex color layer ('Color') and fed to an Emission node. As shown in the Python console at the left bottom of the screen capture, the color in the vertex color layer matches with the Freestyle Line color in question. The same screen capture confirms that the line color in the rendering result is darker than it should be.

vertex_colors.png

Now if the Freestyle Line color is specified directly by the Emission node (without relying on the vertex color layer) as shown in the lower half of the image below, then the rendered line color becomes correct.

So the problem comes from the color sources from which the diffuse color of stroke meshes is taken.

@Sergey, @ThomasDinges, do you guys have any insight about the documented color differences between an Emission color and a vertex color layer in Cycles?

Freestyle generates a temporary scene to render strokes using Cycles. The temporary scene is populated by mesh objects representing the strokes. The upper half of the screen capture below shows the (slightly simplified) shader setttings used for the stroke meshes. Stroke colors are taken from a vertex color layer ('Color') and fed to an Emission node. As shown in the Python console at the left bottom of the screen capture, the color in the vertex color layer matches with the Freestyle Line color in question. The same screen capture confirms that the line color in the rendering result is darker than it should be. ![vertex_colors.png](https://archive.blender.org/developer/F153436/vertex_colors.png) Now if the Freestyle Line color is specified directly by the Emission node (without relying on the vertex color layer) as shown in the lower half of the image below, then the rendered line color becomes correct. So the problem comes from the color sources from which the diffuse color of stroke meshes is taken. @Sergey, @ThomasDinges, do you guys have any insight about the documented color differences between an Emission color and a vertex color layer in Cycles?

I don't think it's something cycles-specific. All the light (including Emission) in render engines is in linear space. And vertex color in blender is in sRGB space i would think.

So what you can do is to linearize the color when creating emission shader by calling srgb_to_linearrgb_v3_v3. It's not totally correct from the CM pipeline, but it's as good as we can do now.

I don't think it's something cycles-specific. All the light (including Emission) in render engines is in linear space. And vertex color in blender is in sRGB space i would think. So what you can do is to linearize the color when creating emission shader by calling `srgb_to_linearrgb_v3_v3`. It's not totally correct from the CM pipeline, but it's as good as we can do now.

This issue was referenced by fc7c856da2

This issue was referenced by fc7c856da21765094f53ba2a8110365b737c6103

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

The fix is very much appreciated, thanks Brecht.

The fix is very much appreciated, thanks Brecht.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44048
No description provided.