Fix T44048: freestyle lines in Cycles are in the wrong color space.